--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<div id="menu-toggle" class="col-2 return-left">
 				<ul>
 					<li><img src="images/icon_note.png" alt="icon note" style="width: 50%;"></li>
-					<li class="active" onclick="actionChangeColor(this);"><a href="#" class="fas fa-list-ol list-action"> Danh sách</a></li>
-					<li class="" onclick="actionChangeColor(this);"><a class="fas fa-plus-square list-action"> Them note</a></li>
+					<li class="active" data-action="get-list" onclick="actionChangeColor(this);"><a href="#" class="fas fa-list-ol list-action"> Danh sách</a></li>
+					<li class="" data-action="add-note" onclick="actionChangeColor(this);"><a class="fas fa-plus-square list-action"> Them note</a></li>
 				</ul>
 
 			</div>
@@ -34,6 +34,6 @@
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="js/index.js" type="module"></script>
 </body>
 </html>
