--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
 		<div class="content" id="content">
 			<div class="intention">
 			<i class="fas fa-2x fa-align-justify content--action-push" id="button--drop-menu" title="Click để hiện menu"></i>
-			<p>noi dung</p>
+			<div class="container" id="list-notes">
+				<div class="text-center h3 text-uppercase font-weight-bold pb-3">Danh sách cuộc hẹn sắp tới</div>
+				<div class="row">
+					<div class="col-3">
+						<div class="content">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+							<div class="delete-card"><i class="fas fa-2x fa-minus-circle"></i></div>
+						</div>
+					</div>
+				</div>
+			</div>
 			</div>
 		</div>
 		<div class="row" style="margin:0; padding:0; "><!-- 
