--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 									<a href="#" class="btn btn-primary">Go somewhere</a>
 								</div>
 							</div>
-							<div class="delete-card"><i class="fas fa-2x fa-minus-circle"></i></div>
+							<div class="delete-card">
+								<div class="pb-5 pt-5">
+									<i class="fas fa-2x fa-minus-circle"></i>
+								</div>
+								<div >
+									<i class="fas fa-2x fa-pencil-alt"></i>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
