--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>App note</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/all.min.css">
+	<link rel="stylesheet" href="css/alertify.core.css">
+	<link rel="stylesheet" href="css/alertify.default.css">
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -57,6 +59,7 @@
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/alertify.min.js"></script>
 	<script src="js/index.js" type="module"></script>
 </body>
 </html>
