--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>App note</title>
+    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/all.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/alertify.core.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/alertify.default.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/index.css">
   </head>
   <body>
     <noscript>
@@ -13,5 +18,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="<%= BASE_URL %>js/jquery-3.5.1.min.js"></script>
+    <script src="<%= BASE_URL %>js/popper.min.js"></script>
+    <script src="<%= BASE_URL %>js/bootstrap.min.js"></script>
+    <script src="<%= BASE_URL %>js/alertify.min.js"></script>
+    <script src="<%= BASE_URL %>js/index.js" type="module"></script>
   </body>
 </html>
