--- a/index.html
+++ b/index.html
@@ -12,38 +12,64 @@
 </head>
 <body>
 
-	<header>
+	<div id="app">
 		<div class="content" id="content">
 			<div class="intention">
-			<i class="fas fa-2x fa-align-justify content--action-push" id="button--drop-menu" title="Click để hiện menu"></i>
-			<div class="container" id="list-notes">
-				<div class="text-center h3 text-uppercase font-weight-bold pb-3">Danh sách cuộc hẹn sắp tới</div>
-				<div class="row">
-					<div class="col-3">
-						<div class="content">
-							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Card title</h5>
-									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+				<i class="fas fa-2x fa-align-justify content--action-push" id="button--drop-menu" title="Click để hiện menu"></i>
+				<div class="container" id="list-notes">
+					<div class="text-center h3 text-uppercase font-weight-bold pb-3">Danh sách cuộc hẹn sắp tới</div>
+					<div class="row">
+						<div class="col-3">
+							<div class="content">
+								<div class="card">
+									<div class="card-body">
+										<h5 class="card-title">Card title</h5>
+										<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+										<a href="#" class="btn btn-primary">Go somewhere</a>
+									</div>
 								</div>
-							</div>
-							<div class="delete-card">
-								<div class="pb-5 pt-5">
-									<i class="fas fa-2x fa-minus-circle"></i>
-								</div>
-								<div >
-									<i class="fas fa-2x fa-pencil-alt"></i>
+								<div class="delete-card">
+									<div class="pb-5 pt-5">
+										<i class="fas fa-2x fa-minus-circle"></i>
+									</div>
+									<div >
+										<i class="fas fa-2x fa-pencil-alt"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<div id="form">
+				<div class="container" id="add-appoinment">
+					<div class="row">
+						<div class="col-8 col-md-6 offset-2 offset-md-3">
+							<form>
+								<div class="form-group">
+									<label for="timeForAppointment">Thời gian</label>
+									<input type="time" class="form-control" required>
+								</div>
+								<div class="form-group">
+									<label for="dateForAppointment">Ngày hẹn</label>
+									<input type="date" class="form-control" required>
+								</div>
+								<div class="form-group">
+									<label for="contentForAppointment">Nội dung cuộc hẹn</label>
+									<input type="text" class="form-control" required>
+								</div>
+								<button type="submit" class="btn btn-primary">Submit</button>
+							</form>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+
+
+
 		<div class="row" style="margin:0; padding:0; "><!-- 
-		<button class="btn btn-success content--action-push">Push</button> -->
+			<button class="btn btn-success content--action-push">Push</button> -->
 			<div id="menu-toggle" class="col-2 return-left">
 				<ul>
 					<li><img src="images/icon_note.png" alt="icon note" style="width: 50%;"></li>
@@ -54,28 +80,9 @@
 			</div>
 			<div class="background--gray"></div>
 		</div>
-	</header>
-	<div class="container" id="add-appoinment">
-		<div class="row">
-			<div class="col-8 col-md-6 offset-2 offset-md-3">
-				<form>
-					<div class="form-group">
-						<label for="timeForAppointment">Thời gian</label>
-						<input type="time" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label for="dateForAppointment">Ngày hẹn</label>
-						<input type="date" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label for="contentForAppointment">Nội dung cuộc hẹn</label>
-						<input type="text" class="form-control" required>
-					</div>
-					<button type="submit" class="btn btn-primary">Submit</button>
-				</form>
-			</div>
-		</div>
 	</div>
+	
+	
 	
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
